--- a/.github/workflows/android-ci.yml
+++ b/.github/workflows/android-ci.yml
@@ -1,9 +1,6 @@
 name: Android CI
 
 on:
-  push:
-    branches:
-      - main
   pull_request:
     branches:
       - main
@@ -11,6 +8,45 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+
+    steps:
+      - run: |
+          echo "Labels: ${{ toJson(github.event.pull_request.labels) }}"
+
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - name: Set up JDK 17
+        uses: actions/setup-java@v3
+        with:
+          java-version: '17'
+          distribution: 'temurin'
+
+      - name: Cache Gradle packages
+        uses: actions/cache@v3
+        with:
+          path: |
+            ~/.gradle/caches
+            ~/.gradle/wrapper
+          key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
+          restore-keys: |
+            ${{ runner.os }}-gradle-
+
+      - name: Run Detekt
+        run: ./gradlew detekt
+
+      - name: Build with Gradle
+        run: ./gradlew assembleDebug
+
+      - name: Upload Build Artifacts
+        uses: actions/upload-artifact@v3
+        with:
+          name: app-build
+          path: app/build/outputs/apk/debug/app-debug.apk
+
+  test-j_unit:
+    runs-on: ubuntu-latest
+    needs: build
 
     steps:
       - name: Checkout code
@@ -22,5 +58,52 @@ jobs:
           java-version: '17'
           distribution: 'temurin'
 
-      - name: Build with Gradle
-        run: ./gradlew assembleDebug
+      - name: Run Unit Tests
+        run: ./gradlew test
+
+  test-ui:
+    if: "!contains(github.event.pull_request.labels.*.name, '⏭️ skip ui tests')"
+    runs-on: ubuntu-latest
+    needs: build
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - name: Set up JDK 17
+        uses: actions/setup-java@v3
+        with:
+          java-version: '17'
+          distribution: 'temurin'
+
+      - name: Download Build Artifacts
+        uses: actions/download-artifact@v3
+        with:
+          name: app-build
+          path: "**/outputs/apk/**/*.apk"
+
+      - name: Cache Gradle packages for UI tests
+        uses: actions/cache@v3
+        with:
+          path: |
+            ~/.gradle/caches
+            ~/.gradle/wrapper
+          key: ${{ runner.os }}-gradle-ui-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
+          restore-keys: |
+            ${{ runner.os }}-gradle-ui-
+
+      - name: Set up Android SDK
+        uses: android-actions/setup-android@v2
+        with:
+          api-level: 34
+
+      - name: Create AVD
+        id: avd
+        uses: reactivecircus/android-emulator-runner@v2
+        with:
+          api-level: 34
+          arch: x86_64
+          profile: Nexus 6
+          script: ./gradlew connectedCheck
+          disable-animations: true
+          wait-for-boot: true
