--- a/.github/workflows/sign-up.yml
+++ b/.github/workflows/sign-up.yml
@@ -1,65 +1,65 @@
-name: Sign APK/AAB
-
-on:
-  push:
-    branches:
-      - main  # Укажите ветку, на которой будет запускаться workflow
-
-jobs:
-  build:
-    runs-on: ubuntu-latest
-
-    strategy:
-      matrix:
-        flavor: [Release]
-      fail-fast: false
-
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-
-      - name: Set up JDK 17
-        uses: actions/setup-java@v3
-        with:
-          java-version: '17'
-          distribution: 'temurin'
-
-      - name: Set up Android SDK
-        uses: android-actions/setup-android@v2
-
-      - name: Decode Keystore
-        env:
-          KEYSTORE_FILE: ${{ secrets.KEYSTORE_FILE }}
-        run: |
-          echo "$KEYSTORE_FILE"
-          echo "$KEYSTORE_FILE" | base64 --decode > my-release-key.jks
-          ls -lh my-release-key.jks
-          keytool -list -v -keystore my-release-key.jks
-
-      - name: Build APK/AAB
-        run: ./gradlew assemble${{ matrix.flavor }} #Release -> uncomment if there are more matrix
-
-      - name: Sign APK/AAB
-        env:
-          KEYSTORE_PASSWORD: ${{ secrets.KEYSTORE_PASSWORD }}
-          KEY_PASSWORD: ${{ secrets.KEY_PASSWORD }}
-          KEY_ALIAS: ${{ secrets.KEY_ALIAS }}
-        run: |
-          jarsigner -verbose -sigalg SHA256withRSA -digestalg SHA-256 \
-            -keystore my-release-key.jks \
-            -storepass "$KEYSTORE_PASSWORD" \
-            -keypass "$KEY_PASSWORD" \
-            app/build/outputs/apk/${{ matrix.flavor }}/release/app-${{ matrix.flavor }}-release-unsigned.apk \
-            "$KEY_ALIAS"
-
-      - name: Zipalign APK
-        run: |
-          $ANDROID_HOME/build-tools/34.0.0/zipalign -v 4 \  # Используем Build Tools 34
-            app/build/outputs/apk/${{ matrix.flavor }}/release/app-${{ matrix.flavor }}-release-unsigned.apk \
-            app/build/outputs/apk/${{ matrix.flavor }}/release/app-${{ matrix.flavor }}-release-signed.apk
-
-      - name: Upload APK/AAB
-        uses: actions/upload-artifact@v3
-        with:
-          name: signed-apk-${{ matrix.flavor }}
-          path: app/build/outputs/apk/${{ matrix.flavor }}/release/app-${{ matrix.flavor }}-release-signed.apk
+#name: Sign APK/AAB
+#
+#on:
+#  push:
+#    branches:
+#      - main  # Укажите ветку, на которой будет запускаться workflow
+#
+#jobs:
+#  build:
+#    runs-on: ubuntu-latest
+#
+#    strategy:
+#      matrix:
+#        flavor: [Release]
+#      fail-fast: false
+#
+#    steps:
+#      - name: Checkout code
+#        uses: actions/checkout@v3
+#
+#      - name: Set up JDK 17
+#        uses: actions/setup-java@v3
+#        with:
+#          java-version: '17'
+#          distribution: 'temurin'
+#
+#      - name: Set up Android SDK
+#        uses: android-actions/setup-android@v2
+#
+#      - name: Decode Keystore
+#        env:
+#          KEYSTORE_FILE: ${{ secrets.KEYSTORE_FILE }}
+#        run: |
+#          echo "$KEYSTORE_FILE"
+#          echo "$KEYSTORE_FILE" | base64 --decode > my-release-key.jks
+#          ls -lh my-release-key.jks
+#          keytool -list -v -keystore my-release-key.jks
+#
+#      - name: Build APK/AAB
+#        run: ./gradlew assemble${{ matrix.flavor }} #Release -> uncomment if there are more matrix
+#
+#      - name: Sign APK/AAB
+#        env:
+#          KEYSTORE_PASSWORD: ${{ secrets.KEYSTORE_PASSWORD }}
+#          KEY_PASSWORD: ${{ secrets.KEY_PASSWORD }}
+#          KEY_ALIAS: ${{ secrets.KEY_ALIAS }}
+#        run: |
+#          jarsigner -verbose -sigalg SHA256withRSA -digestalg SHA-256 \
+#            -keystore my-release-key.jks \
+#            -storepass "$KEYSTORE_PASSWORD" \
+#            -keypass "$KEY_PASSWORD" \
+#            app/build/outputs/apk/${{ matrix.flavor }}/release/app-${{ matrix.flavor }}-release-unsigned.apk \
+#            "$KEY_ALIAS"
+#
+#      - name: Zipalign APK
+#        run: |
+#          $ANDROID_HOME/build-tools/34.0.0/zipalign -v 4 \  # Используем Build Tools 34
+#            app/build/outputs/apk/${{ matrix.flavor }}/release/app-${{ matrix.flavor }}-release-unsigned.apk \
+#            app/build/outputs/apk/${{ matrix.flavor }}/release/app-${{ matrix.flavor }}-release-signed.apk
+#
+#      - name: Upload APK/AAB
+#        uses: actions/upload-artifact@v3
+#        with:
+#          name: signed-apk-${{ matrix.flavor }}
+#          path: app/build/outputs/apk/${{ matrix.flavor }}/release/app-${{ matrix.flavor }}-release-signed.apk
