--- a/.github/workflows/sign-up.yml
+++ b/.github/workflows/sign-up.yml
@@ -29,7 +29,7 @@ jobs:
 
       - name: Decode Keystore
         env:
-          KEYSTORE_FILE: ${{ secrets.RELEASE_KEYSTORE_FILE }}  # Секрет для release
+          KEYSTORE_FILE: ${{ secrets.KEYSTORE_FILE }}
         run: |
           echo "$KEYSTORE_FILE"
           echo "$KEYSTORE_FILE" | base64 --decode > my-release-key.jks
@@ -41,9 +41,9 @@ jobs:
 
       - name: Sign APK/AAB
         env:
-          KEYSTORE_PASSWORD: ${{ secrets.RELEASE_KEYSTORE_PASSWORD }}  # Секрет для release
-          KEY_PASSWORD: ${{ secrets.RELEASE_KEY_PASSWORD }}  # Секрет для release
-          KEY_ALIAS: ${{ secrets.RELEASE_KEY_ALIAS }}  # Секрет для release
+          KEYSTORE_PASSWORD: ${{ secrets.KEYSTORE_PASSWORD }}
+          KEY_PASSWORD: ${{ secrets.KEY_PASSWORD }}
+          KEY_ALIAS: ${{ secrets.KEY_ALIAS }}
         run: |
           jarsigner -verbose -sigalg SHA256withRSA -digestalg SHA-256 \
             -keystore my-release-key.jks \
